--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 asgiref==3.7.2
 diploma-frontend @ file:///Users/artem/PycharmProjects/Django_Diploma/diploma-frontend/dist/diploma-frontend-0.6.tar.gz
 Django==4.2.4
+django-request-logging==0.7.5
+djangorestframework==3.14.0
+pytz==2023.3
 sqlparse==0.4.4
